--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -67,8 +67,8 @@
         </a>
       </li>
       <li>
-        <a href="{{ site.baseurl }}/invoice-timeliness/"
-           class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/invoice-timeliness/' %}font-bold text-indigo-700{% endif %}">
+        <a href="{{ site.baseurl }}/aging/"
+           class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/aging/' %}font-bold text-indigo-700{% endif %}">
           Invoice Timeliness
         </a>
       </li>
