--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -73,8 +73,8 @@
         </a>
       </li>
       <li>
-        <a href="{{ site.baseurl }}/dpo-trends/"
-           class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/dpo-trends/' %}font-bold text-indigo-700{% endif %}">
+        <a href="{{ site.baseurl }}/volume-value/"
+           class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/volume-value/' %}font-bold text-indigo-700{% endif %}">
           DPO Trends
         </a>
       </li>
