--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -75,13 +75,13 @@
       <li>
         <a href="{{ site.baseurl }}/volume-value/"
            class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/volume-value/' %}font-bold text-indigo-700{% endif %}">
-          DPO Trends
+          Invoice Volume & Value 
         </a>
       </li>
       <li>
-        <a href="{{ site.baseurl }}/vendor-behavior/"
-           class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/vendor-behavior/' %}font-bold text-indigo-700{% endif %}">
-          Vendor Behavior
+        <a href="{{ site.baseurl }}/vendor-analysis/"
+           class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/vendor-analysis/' %}font-bold text-indigo-700{% endif %}">
+          Vendor Analysis
         </a>
       </li>
       <li>
