--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -85,9 +85,9 @@
         </a>
       </li>
       <li>
-        <a href="{{ site.baseurl }}/cash-flow/"
-           class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/cash-flow/' %}font-bold text-indigo-700{% endif %}">
-          Cash Flow Impact
+        <a href="{{ site.baseurl }}/operational-cost-control/"
+           class="block py-2 hover:text-indigo-600 {% if page.url == site.baseurl | append: '/operational-cost-control/' %}font-bold text-indigo-700{% endif %}">
+          Operational Cost Control
         </a>
       </li>
     </ul>
