--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -124,6 +124,8 @@
     }
 </script>
 <script>
+  const params = new URLSearchParams(window.location.search);
+  const source = params.get("src") || "direct";
   fetch("https://script.google.com/macros/s/AKfycbxQnisU7CNye7XVl2eKrYQxTciNPCj2LmG8W4PhMrO-X-ynzgmudBTyrjs1ILXwnLpS/exec", {
     method: "POST",
     mode: "no-cors",
@@ -133,7 +135,7 @@
     body: JSON.stringify({
       userAgent: navigator.userAgent,
       page: location.href,
-      referrer: document.referrer,
+      referrer: source,
       screen: `${screen.width}x${screen.height}`,
       language: navigator.language,
       timezone: Intl.DateTimeFormat().resolvedOptions().timeZone,
